--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -145,17 +145,17 @@ body {
 }
 .btn-primary,
 .btn-primary:active {
-  background-color: #972424;
-  border-color: #972424;
-  color: #ffffff;
+  background-color: #972424 !important;
+  border-color: #972424 !important;
+  color: #ffffff !important;
 }
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary.focus,
 .btn-primary.active {
-  color: #ffffff;
-  background-color: #591515;
-  border-color: #591515;
+  color: #ffffff !important;
+  background-color: #591515 !important;
+  border-color: #591515 !important;
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
@@ -165,17 +165,17 @@ body {
 }
 .btn-secondary,
 .btn-secondary:active {
-  background-color: #972424;
-  border-color: #972424;
-  color: #ffffff;
+  background-color: #972424 !important;
+  border-color: #972424 !important;
+  color: #ffffff !important;
 }
 .btn-secondary:hover,
 .btn-secondary:focus,
 .btn-secondary.focus,
 .btn-secondary.active {
-  color: #ffffff;
-  background-color: #591515;
-  border-color: #591515;
+  color: #ffffff !important;
+  background-color: #591515 !important;
+  border-color: #591515 !important;
 }
 .btn-secondary.disabled,
 .btn-secondary:disabled {
@@ -185,17 +185,17 @@ body {
 }
 .btn-info,
 .btn-info:active {
-  background-color: #82786e;
-  border-color: #82786e;
-  color: #ffffff;
+  background-color: #82786e !important;
+  border-color: #82786e !important;
+  color: #ffffff !important;
 }
 .btn-info:hover,
 .btn-info:focus,
 .btn-info.focus,
 .btn-info.active {
-  color: #ffffff;
-  background-color: #59524b;
-  border-color: #59524b;
+  color: #ffffff !important;
+  background-color: #59524b !important;
+  border-color: #59524b !important;
 }
 .btn-info.disabled,
 .btn-info:disabled {
@@ -205,17 +205,17 @@ body {
 }
 .btn-success,
 .btn-success:active {
-  background-color: #f7ed4a;
-  border-color: #f7ed4a;
-  color: #3f3c03;
+  background-color: #f7ed4a !important;
+  border-color: #f7ed4a !important;
+  color: #3f3c03 !important;
 }
 .btn-success:hover,
 .btn-success:focus,
 .btn-success.focus,
 .btn-success.active {
-  color: #3f3c03;
-  background-color: #eadd0a;
-  border-color: #eadd0a;
+  color: #3f3c03 !important;
+  background-color: #eadd0a !important;
+  border-color: #eadd0a !important;
 }
 .btn-success.disabled,
 .btn-success:disabled {
@@ -225,17 +225,17 @@ body {
 }
 .btn-warning,
 .btn-warning:active {
-  background-color: #879a9f;
-  border-color: #879a9f;
-  color: #ffffff;
+  background-color: #879a9f !important;
+  border-color: #879a9f !important;
+  color: #ffffff !important;
 }
 .btn-warning:hover,
 .btn-warning:focus,
 .btn-warning.focus,
 .btn-warning.active {
-  color: #ffffff;
-  background-color: #617479;
-  border-color: #617479;
+  color: #ffffff !important;
+  background-color: #617479 !important;
+  border-color: #617479 !important;
 }
 .btn-warning.disabled,
 .btn-warning:disabled {
@@ -245,17 +245,17 @@ body {
 }
 .btn-danger,
 .btn-danger:active {
-  background-color: #b1a374;
-  border-color: #b1a374;
-  color: #ffffff;
+  background-color: #b1a374 !important;
+  border-color: #b1a374 !important;
+  color: #ffffff !important;
 }
 .btn-danger:hover,
 .btn-danger:focus,
 .btn-danger.focus,
 .btn-danger.active {
-  color: #ffffff;
-  background-color: #8b7d4e;
-  border-color: #8b7d4e;
+  color: #ffffff !important;
+  background-color: #8b7d4e !important;
+  border-color: #8b7d4e !important;
 }
 .btn-danger.disabled,
 .btn-danger:disabled {
@@ -268,17 +268,17 @@ body {
 }
 .btn-white,
 .btn-white:active {
-  background-color: #ffffff;
-  border-color: #ffffff;
-  color: #808080;
+  background-color: #ffffff !important;
+  border-color: #ffffff !important;
+  color: #808080 !important;
 }
 .btn-white:hover,
 .btn-white:focus,
 .btn-white.focus,
 .btn-white.active {
-  color: #808080;
-  background-color: #d9d9d9;
-  border-color: #d9d9d9;
+  color: #808080 !important;
+  background-color: #d9d9d9 !important;
+  border-color: #d9d9d9 !important;
 }
 .btn-white.disabled,
 .btn-white:disabled {
@@ -288,17 +288,17 @@ body {
 }
 .btn-black,
 .btn-black:active {
-  background-color: #333333;
-  border-color: #333333;
-  color: #ffffff;
+  background-color: #333333 !important;
+  border-color: #333333 !important;
+  color: #ffffff !important;
 }
 .btn-black:hover,
 .btn-black:focus,
 .btn-black.focus,
 .btn-black.active {
-  color: #ffffff;
-  background-color: #0d0d0d;
-  border-color: #0d0d0d;
+  color: #ffffff !important;
+  background-color: #0d0d0d !important;
+  border-color: #0d0d0d !important;
 }
 .btn-black.disabled,
 .btn-black:disabled {
@@ -527,6 +527,10 @@ a.text-black:focus {
 }
 .alert-danger {
   background-color: #b1a374;
+}
+.mbr-section-btn a.btn:not(.btn-form):hover,
+.mbr-section-btn a.btn:not(.btn-form):focus {
+  box-shadow: none !important;
 }
 .mbr-gallery-filter li.active .btn {
   background-color: #972424;
@@ -1277,6 +1281,9 @@ body {
   height: auto;
   min-height: 100vh;
 }
+.dropup .dropdown-toggle::after {
+  display: none;
+}
 .cid-qCKAAxcHkv .navbar {
   background: #ffffff;
   transition: none;
@@ -1715,6 +1722,292 @@ body {
   .cid-qCKC77WBQc .card-img span {
     font-size: 40px !important;
   }
+}
+.cid-qSpKAyFWP3 {
+  padding-top: 45px;
+  padding-bottom: 0px;
+  background-color: #972424;
+}
+.cid-qSpKAyFWP3 .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-qSpKAyFWP3 B {
+  color: #ffffff;
+}
+.cid-qSpH0BlO2p {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background-color: #972424;
+}
+.cid-qSpH0BlO2p .content-slider {
+  display: flex;
+  justify-content: center;
+}
+.cid-qSpH0BlO2p .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-qSpH0BlO2p .modal-body .close span {
+  font-style: normal;
+}
+.cid-qSpH0BlO2p .carousel-inner > .active,
+.cid-qSpH0BlO2p .carousel-inner > .next,
+.cid-qSpH0BlO2p .carousel-inner > .prev {
+  display: flex;
+}
+.cid-qSpH0BlO2p .carousel-control .icon-next,
+.cid-qSpH0BlO2p .carousel-control .icon-prev {
+  margin-top: -18px;
+  font-size: 40px;
+  line-height: 27px;
+}
+.cid-qSpH0BlO2p .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-qSpH0BlO2p .container .carousel-control {
+    margin-bottom: 0;
+  }
+  .cid-qSpH0BlO2p .content-slider-wrap {
+    width: 100%!important;
+  }
+}
+.cid-qSpH0BlO2p .boxed-slider {
+  position: relative;
+  padding: 93px 0;
+}
+.cid-qSpH0BlO2p .boxed-slider > div {
+  position: relative;
+}
+.cid-qSpH0BlO2p .container img {
+  width: 100%;
+}
+.cid-qSpH0BlO2p .container img + .row {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  transform: translateY(-50%);
+  z-index: 2;
+}
+.cid-qSpH0BlO2p .mbr-section {
+  padding: 0;
+  background-attachment: scroll;
+}
+.cid-qSpH0BlO2p .mbr-table-cell {
+  padding: 0;
+}
+.cid-qSpH0BlO2p .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+.cid-qSpH0BlO2p .carousel-caption {
+  top: 50%;
+  right: 0;
+  bottom: auto;
+  left: 0;
+  display: flex;
+  align-items: center;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.cid-qSpH0BlO2p .mbr-overlay {
+  z-index: 1;
+}
+.cid-qSpH0BlO2p .container-slide.container {
+  width: 100%;
+  min-height: 100vh;
+  padding: 0;
+}
+.cid-qSpH0BlO2p .carousel-item {
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -o-transition: -o-transform 0.6s ease-in-out;
+  -webkit-transition: -webkit-transform 0.6s ease-in-out;
+  transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out, -o-transform 0.6s ease-in-out;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-perspective: 1000px;
+  perspective: 1000px;
+}
+@media (max-width: 576px) {
+  .cid-qSpH0BlO2p .carousel-item .container {
+    width: 100%;
+  }
+}
+.cid-qSpH0BlO2p .carousel-item-next.carousel-item-left,
+.cid-qSpH0BlO2p .carousel-item-prev.carousel-item-right {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+.cid-qSpH0BlO2p .active.carousel-item-right,
+.cid-qSpH0BlO2p .carousel-item-next {
+  -webkit-transform: translate3d(100%, 0, 0);
+  transform: translate3d(100%, 0, 0);
+}
+.cid-qSpH0BlO2p .active.carousel-item-left,
+.cid-qSpH0BlO2p .carousel-item-prev {
+  -webkit-transform: translate3d(-100%, 0, 0);
+  transform: translate3d(-100%, 0, 0);
+}
+.cid-qSpH0BlO2p .mbr-slider .carousel-control {
+  top: 50%;
+  width: 50px;
+  height: 50px;
+  margin-top: -1.5rem;
+  font-size: 35px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all .3s;
+}
+.cid-qSpH0BlO2p .mbr-slider .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-qSpH0BlO2p .mbr-slider .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-qSpH0BlO2p .mbr-slider .carousel-control .mbr-iconfont {
+  font-size: 1.5rem;
+}
+@media (max-width: 767px) {
+  .cid-qSpH0BlO2p .mbr-slider .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-qSpH0BlO2p .mbr-slider .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 1.5rem !important;
+}
+.cid-qSpH0BlO2p .mbr-slider .carousel-indicators li {
+  max-width: 15px;
+  height: 15px;
+  max-height: 15px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: .5;
+  transition: all .3s;
+}
+.cid-qSpH0BlO2p .mbr-slider .carousel-indicators li.active,
+.cid-qSpH0BlO2p .mbr-slider .carousel-indicators li:hover {
+  opacity: .9;
+}
+.cid-qSpH0BlO2p .mbr-slider .carousel-indicators li::after,
+.cid-qSpH0BlO2p .mbr-slider .carousel-indicators li::before {
+  content: none;
+}
+.cid-qSpH0BlO2p .mbr-slider .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 576px) {
+  .cid-qSpH0BlO2p .mbr-slider .carousel-indicators {
+    display: none !important;
+  }
+}
+.cid-qSpH0BlO2p .mbr-slider > .container img {
+  width: 100%;
+}
+.cid-qSpH0BlO2p .mbr-slider > .container img + .row {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  left: 0;
+  z-index: 2;
+  -moz-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.cid-qSpH0BlO2p .mbr-slider > .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+@media (max-width: 576px) {
+  .cid-qSpH0BlO2p .mbr-slider > .container .carousel-control {
+    margin-bottom: 0;
+  }
+}
+.cid-qSpH0BlO2p .mbr-slider .mbr-section {
+  padding: 0;
+  background-attachment: scroll;
+}
+.cid-qSpH0BlO2p .mbr-slider .mbr-table-cell {
+  padding: 0;
+}
+.cid-qSpH0BlO2p .carousel-item .container.container-slide {
+  position: initial;
+  width: auto;
+  min-height: 0;
+}
+.cid-qSpH0BlO2p .full-screen .slider-fullscreen-image {
+  min-height: 100vh;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;
+}
+.cid-qSpH0BlO2p .full-screen .slider-fullscreen-image.active {
+  display: -o-flex;
+}
+.cid-qSpH0BlO2p .full-screen .container {
+  width: auto;
+  padding-right: 0;
+  padding-left: 0;
+}
+.cid-qSpH0BlO2p .full-screen .carousel-item .container.container-slide {
+  width: 100%;
+  min-height: 100vh;
+  padding: 0;
+}
+.cid-qSpH0BlO2p .full-screen .carousel-item .container.container-slide img {
+  display: none;
+}
+.cid-qSpH0BlO2p .mbr-background-video-preview {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.cid-qSpH0BlO2p .mbr-overlay ~ .container-slide {
+  z-index: auto;
+}
+.cid-qSpH0BlO2p .mbr-slider.slide .container {
+  overflow: hidden;
+  padding: 0;
+}
+.cid-qSpH0BlO2p .carousel-inner {
+  height: 100%;
+}
+.cid-qSpH0BlO2p .slider-fullscreen-image {
+  height: 100%;
+  background: transparent !important;
+}
+.cid-qSpH0BlO2p .image_wrapper {
+  height: 440px;
+  width: 100%;
+  position: relative;
+  display: inline-block;
+}
+.cid-qSpH0BlO2p .image_wrapper img {
+  width: auto !important;
+  height: 100%;
+}
+.cid-qSpH0BlO2p .carousel-item .container-slide {
+  text-align: center;
+}
+.cid-qSpH0BlO2p .content-slider-wrap {
+  width: 69%;
 }
 .cid-qCMoGEh2iY {
   padding-top: 90px;
