create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2009,6 +2009,54 @@ body {
 .cid-qSpH0BlO2p .content-slider-wrap {
   width: 69%;
 }
+.cid-r1PYc6QXhH {
+  padding-top: 60px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-r1PYc6QXhH .carousel-item {
+  justify-content: center;
+}
+.cid-r1PYc6QXhH .carousel-item.active,
+.cid-r1PYc6QXhH .carousel-item-next,
+.cid-r1PYc6QXhH .carousel-item-prev {
+  display: flex;
+}
+.cid-r1PYc6QXhH .carousel-controls a {
+  transition: opacity .5s;
+  font-size: 2rem;
+}
+.cid-r1PYc6QXhH .carousel-controls a span {
+  position: absolute;
+  top: 180px;
+  padding: 10px;
+  border-radius: 50%;
+  color: #585858;
+  background: #c8c6c6;
+  opacity: .5;
+}
+.cid-r1PYc6QXhH .carousel-controls a:hover span {
+  opacity: 1;
+}
+.cid-r1PYc6QXhH .user_image {
+  width: 200px;
+  height: 200px;
+  margin-bottom: 1.6rem;
+  overflow: hidden;
+  border-radius: 50%;
+  margin: 0 auto 2rem auto;
+}
+.cid-r1PYc6QXhH .user_image img {
+  width: 100%;
+  min-width: 100%;
+  min-height: 100%;
+}
+@media (max-width: 230px) {
+  .cid-r1PYc6QXhH .user_image {
+    width: 100%;
+    height: auto;
+  }
+}
 .cid-qCMoGEh2iY {
   padding-top: 90px;
   padding-bottom: 0px;
