--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2217,48 +2217,515 @@ body {
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
 }
-.cid-qCKDWoe9XF {
+.cid-qSpOwpGRnX {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background: linear-gradient(0deg, #972424, #972424);
+}
+.cid-qSpOwpGRnX .mbr-iconfont-social {
+  font-size: 32px;
+  color: #ffffff;
+}
+.cid-qSpOwpGRnX .social-list a:focus {
+  text-decoration: none;
+}
+.cid-qCKDSIQcVZ {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #972424;
+}
+.cid-qCKDSIQcVZ .media-container-row .mbr-text {
+  color: #972424;
+}
+.cid-qCKDSIQcVZ .media-container-row .mbr-text B {
+  color: #972424;
+}
+.cid-qCKAAxcHkv .navbar {
+  background: #ffffff;
+  transition: none;
+  min-height: 77px;
+  padding: .5rem 0;
+}
+.cid-qCKAAxcHkv .navbar-dropdown.bg-color.transparent.opened {
+  background: #ffffff;
+}
+.cid-qCKAAxcHkv a {
+  font-style: normal;
+}
+.cid-qCKAAxcHkv .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-qCKAAxcHkv .nav-item a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+}
+.cid-qCKAAxcHkv .nav-item:focus,
+.cid-qCKAAxcHkv .nav-link:focus {
+  outline: none;
+}
+.cid-qCKAAxcHkv .btn {
+  padding: 0.4rem 1.5rem;
+  display: inline-flex;
+  align-items: center;
+}
+.cid-qCKAAxcHkv .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-qCKAAxcHkv .menu-logo {
+  margin-right: auto;
+}
+.cid-qCKAAxcHkv .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  align-items: center;
+}
+.cid-qCKAAxcHkv .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-qCKAAxcHkv .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-qCKAAxcHkv .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-qCKAAxcHkv .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-qCKAAxcHkv .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-qCKAAxcHkv .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-qCKAAxcHkv .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-qCKAAxcHkv .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-qCKAAxcHkv .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-qCKAAxcHkv .dropdown .dropdown-menu {
+  background: #ffffff;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-qCKAAxcHkv .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-qCKAAxcHkv .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-qCKAAxcHkv .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-qCKAAxcHkv .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-qCKAAxcHkv .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-qCKAAxcHkv .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-qCKAAxcHkv .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-qCKAAxcHkv .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-qCKAAxcHkv .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-qCKAAxcHkv .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-qCKAAxcHkv .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-qCKAAxcHkv button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-qCKAAxcHkv button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-qCKAAxcHkv button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #972424;
+}
+.cid-qCKAAxcHkv button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-qCKAAxcHkv button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qCKAAxcHkv button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qCKAAxcHkv button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-qCKAAxcHkv nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qCKAAxcHkv nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-qCKAAxcHkv nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-qCKAAxcHkv nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qCKAAxcHkv .collapsed.navbar-expand {
+  flex-direction: column;
+}
+.cid-qCKAAxcHkv .collapsed .btn {
+  display: flex;
+}
+.cid-qCKAAxcHkv .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-qCKAAxcHkv .collapsed .navbar-collapse.collapsing,
+.cid-qCKAAxcHkv .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-qCKAAxcHkv .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-qCKAAxcHkv .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-qCKAAxcHkv .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-qCKAAxcHkv .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-qCKAAxcHkv .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-qCKAAxcHkv .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
+.cid-qCKAAxcHkv .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-qCKAAxcHkv .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-qCKAAxcHkv .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-qCKAAxcHkv .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-qCKAAxcHkv .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-qCKAAxcHkv .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-qCKAAxcHkv .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-qCKAAxcHkv .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-qCKAAxcHkv .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-qCKAAxcHkv .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-qCKAAxcHkv .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-qCKAAxcHkv.navbar-expand {
+    flex-direction: column;
+  }
+  .cid-qCKAAxcHkv img {
+    height: 3.8rem !important;
+  }
+  .cid-qCKAAxcHkv .btn {
+    display: flex;
+  }
+  .cid-qCKAAxcHkv button.navbar-toggler {
+    display: block;
+  }
+  .cid-qCKAAxcHkv .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-qCKAAxcHkv .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-qCKAAxcHkv .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-qCKAAxcHkv .navbar-collapse.collapsing,
+  .cid-qCKAAxcHkv .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-qCKAAxcHkv .navbar-collapse.collapsing .navbar-nav,
+  .cid-qCKAAxcHkv .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-qCKAAxcHkv .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-qCKAAxcHkv .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-qCKAAxcHkv .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-qCKAAxcHkv .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-qCKAAxcHkv .navbar-collapse.collapsing .navbar-buttons,
+  .cid-qCKAAxcHkv .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-qCKAAxcHkv .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-qCKAAxcHkv .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-qCKAAxcHkv .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-qCKAAxcHkv .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-qCKAAxcHkv .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-qCKAAxcHkv .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-qCKAAxcHkv .menu-logo {
+    flex-shrink: 0;
+  }
+}
+.cid-qCKAAxcHkv .navbar-collapse {
+  flex-basis: auto;
+}
+.cid-qCKAAxcHkv .nav-link:hover,
+.cid-qCKAAxcHkv .dropdown-item:hover {
+  color: #972424 !important;
+}
+.cid-qCKAY5wYrl {
+  background-image: url("../../../assets/images/fotolia-9096024-m-1691x1123.jpg");
+}
+.cid-qCKAY5wYrl H1 {
+  color: #972424;
+}
+.cid-qCKAY5wYrl .mbr-text,
+.cid-qCKAY5wYrl .mbr-section-btn {
+  color: #232323;
+}
+.cid-rjVMBkEkM6 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #972424;
+}
+.cid-rjVMBkEkM6 .testimonials-container {
+  margin: 0 auto;
+}
+.cid-rjVMBkEkM6 .testimonials-container .testimonials-item {
+  justify-content: center;
+  margin-top: 3rem;
+  -webkit-justify-content: center;
+}
+.cid-rjVMBkEkM6 .testimonials-container .testimonials-item .user {
+  background: #ffffff;
+}
+.cid-rjVMBkEkM6 .testimonials-container .testimonials-item .user.row {
+  margin: 0;
+}
+.cid-rjVMBkEkM6 .testimonials-container .testimonials-item .user .user_image {
+  width: 150px;
+  height: 150px;
+  overflow: hidden;
+  margin: 2rem auto 2rem auto;
+}
+.cid-rjVMBkEkM6 .testimonials-container .testimonials-item .user .user_image img {
+  width: 100%;
+  min-width: 100%;
+  min-height: 100%;
+}
+.cid-rjVMBkEkM6 .testimonials-container .testimonials-item .user .testimonials-caption {
+  padding: 2rem;
+  padding: 2rem 2rem 2rem 0;
+}
+@media (max-width: 260px) {
+  .cid-rjVMBkEkM6 .user_image {
+    width: 100% !important;
+    height: auto !important;
+  }
+}
+@media (max-width: 767px) {
+  .cid-rjVMBkEkM6 .testimonials-caption {
+    padding: 0 2rem 2rem 2rem !important;
+  }
+}
+.cid-rjXVHgLBnw {
   padding-top: 30px;
   padding-bottom: 15px;
   background-color: #972424;
 }
-.cid-qCKDWoe9XF .title {
+.cid-rjXVHgLBnw .title {
   margin-bottom: 2rem;
 }
-.cid-qCKDWoe9XF .mbr-section-subtitle {
+.cid-rjXVHgLBnw .mbr-section-subtitle {
   color: #767676;
 }
-.cid-qCKDWoe9XF a:not([href]):not([tabindex]) {
+.cid-rjXVHgLBnw a:not([href]):not([tabindex]) {
   color: #fff;
   border-radius: 3px;
 }
-.cid-qCKDWoe9XF a.btn-white:not([href]):not([tabindex]) {
+.cid-rjXVHgLBnw a.btn-white:not([href]):not([tabindex]) {
   color: #333;
 }
-.cid-qCKDWoe9XF .multi-horizontal {
+.cid-rjXVHgLBnw .multi-horizontal {
   flex-grow: 1;
   -webkit-flex-grow: 1;
   max-width: 100%;
 }
-.cid-qCKDWoe9XF .input-group-btn {
+.cid-rjXVHgLBnw .input-group-btn {
   display: block;
   text-align: center;
 }
-.cid-qCKDWoe9XF LABEL {
+.cid-rjXVHgLBnw LABEL {
   color: #ffffff;
 }
-.cid-qCKDWoe9XF H2 {
+.cid-rjXVHgLBnw H2 {
   color: #ffffff;
 }
-.cid-qSpRRjUxg9 {
+.cid-rjXYsZwOmF {
   padding-top: 0px;
   padding-bottom: 15px;
   background-color: #972424;
 }
-.cid-qSpRRjUxg9 .mbr-section-subtitle {
+.cid-rjXYsZwOmF .mbr-section-subtitle {
   color: #ffffff;
 }
-.cid-qSpRRjUxg9 .mbr-section-subtitle DIV {
+.cid-rjXYsZwOmF .mbr-section-subtitle DIV {
   color: #ffffff;
 }
 .cid-qSpOwpGRnX {
@@ -2279,5 +2746,8 @@ body {
   background-color: #ffffff;
 }
 .cid-qCKDSIQcVZ .media-container-row .mbr-text {
+  color: #972424;
+}
+.cid-qCKDSIQcVZ .media-container-row .mbr-text B {
   color: #972424;
 }
