create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2232,7 +2232,7 @@ body {
 .cid-qCKDSIQcVZ {
   padding-top: 15px;
   padding-bottom: 15px;
-  background-color: #972424;
+  background-color: #ffffff;
 }
 .cid-qCKDSIQcVZ .media-container-row .mbr-text {
   color: #972424;
