--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1733,291 +1733,103 @@ body {
     font-size: 40px !important;
   }
 }
-.cid-qSpKAyFWP3 {
-  padding-top: 45px;
-  padding-bottom: 0px;
+.cid-rk6WVGO1Kq {
+  padding-top: 60px;
+  padding-bottom: 75px;
   background-color: #972424;
 }
-.cid-qSpKAyFWP3 .mbr-section-subtitle {
+.cid-rk6WVGO1Kq .mbr-section-subtitle {
   color: #767676;
+  font-weight: 300;
 }
-.cid-qSpKAyFWP3 B {
-  color: #ffffff;
+.cid-rk6WVGO1Kq .media-container-row {
+  word-wrap: break-word;
+  word-break: break-word;
+  align-items: stretch;
+  -webkit-align-items: stretch;
 }
-.cid-qSpH0BlO2p {
-  padding-top: 0px;
-  padding-bottom: 30px;
-  background-color: #972424;
-}
-.cid-qSpH0BlO2p .content-slider {
-  display: flex;
-  justify-content: center;
-}
-.cid-qSpH0BlO2p .modal-body .close {
-  background: #1b1b1b;
-}
-.cid-qSpH0BlO2p .modal-body .close span {
-  font-style: normal;
-}
-.cid-qSpH0BlO2p .carousel-inner > .active,
-.cid-qSpH0BlO2p .carousel-inner > .next,
-.cid-qSpH0BlO2p .carousel-inner > .prev {
-  display: flex;
-}
-.cid-qSpH0BlO2p .carousel-control .icon-next,
-.cid-qSpH0BlO2p .carousel-control .icon-prev {
-  margin-top: -18px;
-  font-size: 40px;
-  line-height: 27px;
-}
-.cid-qSpH0BlO2p .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-qSpH0BlO2p .container .carousel-control {
-    margin-bottom: 0;
-  }
-  .cid-qSpH0BlO2p .content-slider-wrap {
-    width: 100%!important;
-  }
-}
-.cid-qSpH0BlO2p .boxed-slider {
-  position: relative;
-  padding: 93px 0;
-}
-.cid-qSpH0BlO2p .boxed-slider > div {
-  position: relative;
-}
-.cid-qSpH0BlO2p .container img {
-  width: 100%;
-}
-.cid-qSpH0BlO2p .container img + .row {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  right: 0;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  transform: translateY(-50%);
-  z-index: 2;
-}
-.cid-qSpH0BlO2p .mbr-section {
-  padding: 0;
-  background-attachment: scroll;
-}
-.cid-qSpH0BlO2p .mbr-table-cell {
-  padding: 0;
-}
-.cid-qSpH0BlO2p .container .carousel-indicators {
-  margin-bottom: 3px;
-}
-.cid-qSpH0BlO2p .carousel-caption {
-  top: 50%;
-  right: 0;
-  bottom: auto;
-  left: 0;
-  display: flex;
-  align-items: center;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
-.cid-qSpH0BlO2p .mbr-overlay {
-  z-index: 1;
-}
-.cid-qSpH0BlO2p .container-slide.container {
-  width: 100%;
-  min-height: 100vh;
-  padding: 0;
-}
-.cid-qSpH0BlO2p .carousel-item {
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -o-transition: -o-transform 0.6s ease-in-out;
-  -webkit-transition: -webkit-transform 0.6s ease-in-out;
-  transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out, -o-transform 0.6s ease-in-out;
+.cid-rk6WVGO1Kq .card_cont {
+  -o-transition: all .5s;
+  -ms-transition: all .5s;
+  -moz-transition: all .5s;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+  -o-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
-  -webkit-perspective: 1000px;
-  perspective: 1000px;
-}
-@media (max-width: 576px) {
-  .cid-qSpH0BlO2p .carousel-item .container {
-    width: 100%;
-  }
-}
-.cid-qSpH0BlO2p .carousel-item-next.carousel-item-left,
-.cid-qSpH0BlO2p .carousel-item-prev.carousel-item-right {
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-.cid-qSpH0BlO2p .active.carousel-item-right,
-.cid-qSpH0BlO2p .carousel-item-next {
-  -webkit-transform: translate3d(100%, 0, 0);
-  transform: translate3d(100%, 0, 0);
-}
-.cid-qSpH0BlO2p .active.carousel-item-left,
-.cid-qSpH0BlO2p .carousel-item-prev {
-  -webkit-transform: translate3d(-100%, 0, 0);
-  transform: translate3d(-100%, 0, 0);
-}
-.cid-qSpH0BlO2p .mbr-slider .carousel-control {
-  top: 50%;
-  width: 50px;
-  height: 50px;
-  margin-top: -1.5rem;
-  font-size: 35px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all .3s;
-}
-.cid-qSpH0BlO2p .mbr-slider .carousel-control.carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-qSpH0BlO2p .mbr-slider .carousel-control.carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-qSpH0BlO2p .mbr-slider .carousel-control .mbr-iconfont {
-  font-size: 1.5rem;
-}
-@media (max-width: 767px) {
-  .cid-qSpH0BlO2p .mbr-slider .carousel-control {
-    top: auto;
-    bottom: 1rem;
-  }
-}
-.cid-qSpH0BlO2p .mbr-slider .carousel-indicators {
   position: absolute;
-  bottom: 0;
-  margin-bottom: 1.5rem !important;
-}
-.cid-qSpH0BlO2p .mbr-slider .carousel-indicators li {
-  max-width: 15px;
-  height: 15px;
-  max-height: 15px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: .5;
-  transition: all .3s;
-}
-.cid-qSpH0BlO2p .mbr-slider .carousel-indicators li.active,
-.cid-qSpH0BlO2p .mbr-slider .carousel-indicators li:hover {
-  opacity: .9;
-}
-.cid-qSpH0BlO2p .mbr-slider .carousel-indicators li::after,
-.cid-qSpH0BlO2p .mbr-slider .carousel-indicators li::before {
-  content: none;
-}
-.cid-qSpH0BlO2p .mbr-slider .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
+  top: 0px;
+  left: 0px;
   text-align: center;
+  background-color: #eee;
 }
-@media (max-width: 576px) {
-  .cid-qSpH0BlO2p .mbr-slider .carousel-indicators {
-    display: none !important;
-  }
-}
-.cid-qSpH0BlO2p .mbr-slider > .container img {
-  width: 100%;
-}
-.cid-qSpH0BlO2p .mbr-slider > .container img + .row {
-  position: absolute;
-  top: 50%;
-  right: 0;
-  left: 0;
+.cid-rk6WVGO1Kq .card-front {
   z-index: 2;
-  -moz-transform: translateY(-50%);
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
-.cid-qSpH0BlO2p .mbr-slider > .container .carousel-indicators {
-  margin-bottom: 3px;
-}
-@media (max-width: 576px) {
-  .cid-qSpH0BlO2p .mbr-slider > .container .carousel-control {
-    margin-bottom: 0;
-  }
-}
-.cid-qSpH0BlO2p .mbr-slider .mbr-section {
   padding: 0;
-  background-attachment: scroll;
-}
-.cid-qSpH0BlO2p .mbr-slider .mbr-table-cell {
-  padding: 0;
-}
-.cid-qSpH0BlO2p .carousel-item .container.container-slide {
-  position: initial;
-  width: auto;
-  min-height: 0;
-}
-.cid-qSpH0BlO2p .full-screen .slider-fullscreen-image {
-  min-height: 100vh;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: cover;
-}
-.cid-qSpH0BlO2p .full-screen .slider-fullscreen-image.active {
-  display: -o-flex;
-}
-.cid-qSpH0BlO2p .full-screen .container {
-  width: auto;
-  padding-right: 0;
-  padding-left: 0;
-}
-.cid-qSpH0BlO2p .full-screen .carousel-item .container.container-slide {
   width: 100%;
-  min-height: 100vh;
-  padding: 0;
-}
-.cid-qSpH0BlO2p .full-screen .carousel-item .container.container-slide img {
-  display: none;
-}
-.cid-qSpH0BlO2p .mbr-background-video-preview {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-.cid-qSpH0BlO2p .mbr-overlay ~ .container-slide {
-  z-index: auto;
-}
-.cid-qSpH0BlO2p .mbr-slider.slide .container {
+  height: 100%;
   overflow: hidden;
-  padding: 0;
 }
-.cid-qSpH0BlO2p .carousel-inner {
+.cid-rk6WVGO1Kq .card-front img {
   height: 100%;
+  min-width: 100%;
+  width: auto;
 }
-.cid-qSpH0BlO2p .slider-fullscreen-image {
-  height: 100%;
-  background: transparent !important;
-}
-.cid-qSpH0BlO2p .image_wrapper {
-  height: 440px;
+.cid-rk6WVGO1Kq .card_back {
   width: 100%;
-  position: relative;
-  display: inline-block;
-}
-.cid-qSpH0BlO2p .image_wrapper img {
-  width: auto !important;
   height: 100%;
-}
-.cid-qSpH0BlO2p .carousel-item .container-slide {
+  padding: 30px 30px;
+  color: #ffffff;
+  background-color: #ffffff;
+  z-index: 1;
+  margin: 0;
   text-align: center;
+  overflow: hidden;
+  -o-transform: rotateX(-180deg);
+  -ms-transform: rotateX(-180deg);
+  -moz-transform: rotateX(-180deg);
+  -webkit-transform: rotateX(-180deg);
+  transform: rotateX(-180deg);
 }
-.cid-qSpH0BlO2p .content-slider-wrap {
-  width: 69%;
+.cid-rk6WVGO1Kq .card {
+  min-height: 300px;
+}
+.cid-rk6WVGO1Kq .card:hover .card-front {
+  z-index: 1;
+  -o-transform: rotateX(180deg);
+  -ms-transform: rotateX(180deg);
+  -moz-transform: rotateX(180deg);
+  -webkit-transform: rotateX(180deg);
+  transform: rotateX(180deg);
+}
+.cid-rk6WVGO1Kq .card:hover .card_back {
+  z-index: 2;
+  -o-transform: rotateX(0deg);
+  -ms-transform: rotateX(0deg);
+  -moz-transform: rotateX(0deg);
+  -webkit-transform: rotateX(0deg);
+  transform: rotateX(0deg);
+}
+.cid-rk6WVGO1Kq .builderCard .card_back {
+  border-bottom-left-radius: 100px;
+}
+.cid-rk6WVGO1Kq .builderCard .card_cont {
+  -o-backface-visibility: hidden;
+  -ms-backface-visibility: hidd;
+  -moz-backface-visibility: visible;
+  -webkit-backface-visibility: visible;
+  backface-visibility: visible;
+}
+.cid-rk6WVGO1Kq P {
+  color: #972424;
+}
+.cid-rk6WVGO1Kq H4 {
+  color: #972424;
+}
+.cid-rk6WVGO1Kq .mbr-section-title {
+  color: #ffffff;
 }
 .cid-r1PYc6QXhH {
   padding-top: 60px;
