create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1695,7 +1695,7 @@ body {
   color: #972424 !important;
 }
 .cid-qCKAY5wYrl {
-  background-image: url("../../../assets/images/fotolia-9096024-m-1691x1123.jpg");
+  background-image: url("../../../assets/images/map-1920x1080.png");
 }
 .cid-qCKAY5wYrl H1 {
   color: #972424;
