--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1122,6 +1122,34 @@ section.lazy-placeholder:after {
   color: #ffffff;
   text-align: center;
 }
+.cid-rP4ZgWTgsH {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #972424;
+}
+.cid-rP4ZgWTgsH h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-rP4ZgWTgsH p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rP4ZgWTgsH .card-box {
+  padding-top: 2rem;
+}
+.cid-rP4ZgWTgsH .card-wrapper {
+  height: 100%;
+}
+.cid-rP4ZgWTgsH .card-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-rP4ZgWTgsH P {
+  color: #ffffff;
+  text-align: center;
+}
 .cid-r1PYc6QXhH {
   padding-top: 0px;
   padding-bottom: 15px;
