--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1211,7 +1211,7 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-qCMoGEh2iY {
-  padding-top: 90px;
+  padding-top: 45px;
   padding-bottom: 0px;
   background-color: #ffffff;
 }
@@ -1284,6 +1284,54 @@ section.lazy-placeholder:after {
 }
 .cid-qCMoGEh2iY .mbr-section-title {
   color: #972424;
+}
+.cid-qCMoGEh2iY .mbr-section-text {
+  text-align: left;
+}
+.cid-rP57opZpQM {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rP57opZpQM h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-rP57opZpQM p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rP57opZpQM .card-img {
+  text-align: left;
+  padding-right: 30px;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+  width: auto;
+}
+.cid-rP57opZpQM .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+.cid-rP57opZpQM .card-title {
+  margin-bottom: 0;
+}
+.cid-rP57opZpQM .mbr-crt-title {
+  -webkit-flex-grow: 1;
+  flex-grow: 1;
+}
+.cid-rP57opZpQM .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+@media (max-width: 300px) {
+  .cid-rP57opZpQM .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-rP57opZpQM .card-title,
+.cid-rP57opZpQM .card-img {
+  text-align: left;
 }
 .cid-rOLv5bwX3C {
   padding-top: 15px;
