--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1094,31 +1094,59 @@ section.lazy-placeholder:after {
   text-align: center;
   color: #ffffff;
 }
-.cid-rV0LcYc7Id {
+.cid-rVWb0egJiB {
   padding-top: 0px;
   padding-bottom: 0px;
   background-color: #972424;
 }
-.cid-rV0LcYc7Id h4 {
+.cid-rVWb0egJiB h4 {
   font-weight: 500;
   margin-bottom: 0;
   text-align: left;
 }
-.cid-rV0LcYc7Id p {
+.cid-rVWb0egJiB p {
   color: #767676;
   text-align: left;
 }
-.cid-rV0LcYc7Id .card-box {
+.cid-rVWb0egJiB .card-box {
   padding-top: 2rem;
 }
-.cid-rV0LcYc7Id .card-wrapper {
+.cid-rVWb0egJiB .card-wrapper {
   height: 100%;
 }
-.cid-rV0LcYc7Id .card-title {
+.cid-rVWb0egJiB .card-title {
   text-align: center;
   color: #ffffff;
 }
-.cid-rV0LcYc7Id P {
+.cid-rVWb0egJiB P {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-rVWb2sXAEG {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #972424;
+}
+.cid-rVWb2sXAEG h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-rVWb2sXAEG p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rVWb2sXAEG .card-box {
+  padding-top: 2rem;
+}
+.cid-rVWb2sXAEG .card-wrapper {
+  height: 100%;
+}
+.cid-rVWb2sXAEG .card-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-rVWb2sXAEG P {
   color: #ffffff;
   text-align: center;
 }
